# markdown.vim

./: README.md
autoload/: markdown.vim
ftplugin/: markdown.vim
scripts/: gettitle.py  pyproject.toml
syntax/: markdown.vim
