[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Adam Szkoda <adaszko@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
"pdfminer.six" = "^20200517"
bs4 = "^0.0.1"
requests = "^2.24.0"
pdfminer = "^20191125"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
